chromium-browser (10.0.648.82~r75062-1) UNRELEASED; urgency=low

  * New beta version
  * Refreshed pathces

 -- Giuseppe Iuculano <iuculano@debian.org>  Sat, 19 Feb 2011 12:21:01 +0100

chromium-browser (9.0.597.98~r74359-1) unstable; urgency=low

  [ Giuseppe Iuculano ]
  * New stable version:
    - [67234] High Stale pointer in animation event handling. Credit to Rik
      Cabanier.
    - [68120] High Use-after-free in SVG font faces. Credit to miaubiz.
    - [69556] High Stale pointer with anonymous block handling. Credit to
      Martin Barbella.
    - [69970] Medium Out-of-bounds read in plug-in handling. Credit to Bill
      Budge of Google.
    - [70456] Medium Possible failure to terminate process on out-of-memory
      condition. Credit to David Warren of CERT/CC.

  [ Daniel Echeverry ]
  * Fixed FTBFS caused by nspr.patch (Closes: #612618)

 -- Giuseppe Iuculano <iuculano@debian.org>  Wed, 16 Feb 2011 09:07:31 +0100

chromium-browser (9.0.597.84~r72991-1) unstable; urgency=low

  * New stable version:
    - [55831] High Use-after-free in image loading. Credit to Aki Helin of OUSPG
    - [59081] Low Apply some restrictions to cross-origin drag + drop. Credit to
      Google Chrome Security Team (SkyLined) and the Google Security Team
      (Michal Zalewski, David Bloom).
    - [62791] Low Browser crash with extension with missing key. Credit to Brian
      Kirchoff.
    - [65669] Low Handle merging of autofill profiles more gracefully. Credit to
      Google Chrome Security Team (Inferno).
    - [68244] Low Browser crash with bad volume setting. Credit to Matthew
      Heidermann.
    - [69195] Critical Race condition in audio handling. Credit to the gamers of
      Reddit!

 -- Giuseppe Iuculano <iuculano@debian.org>  Sun, 06 Feb 2011 23:50:23 +0100

chromium-browser (9.0.597.83~r72435-1) unstable; urgency=low

  [ Giuseppe Iuculano ]
  * New beta version.
  * Added a README.Debian and warn about downgrading (Closes: #605548) 