@@ -1,7 +1,7 @@
 Chromium for Debian
 ====================
 
-Please read the file /usr/share/bug/chromium-browser/presubj for information
+Please read the file /usr/share/bug/chromium/presubj for information
 you may want to know if you will report a bug.
 
 DOWNGRADE
