@@ -1,5 +1,0 @@
-# Default settings for chromium-browser. This file is sourced by /bin/sh from
-# /usr/bin/chromium-browser
-
-# Options to pass to chromium-browser
-CHROMIUM_FLAGS=""
