@@ -1,2 +1,0 @@
-usr/lib/chromium-browser/plugins
-usr/lib/chromium-browser/resources
