@@ -1,14 +1,0 @@
-debian/tmp/etc
-debian/tmp/usr/bin
-debian/tmp/usr/lib/chromium-browser/chrom*
-debian/tmp/usr/lib/chromium-browser/xdg-settings
-debian/tmp/usr/lib/chromium-browser/resources.pak
-debian/tmp/usr/lib/chromium-browser/locales/*
-debian/tmp/usr/lib/chromium-browser/ffmpegsumo_nolink
-debian/tmp/usr/lib/chromium-browser/libffmpegsumo.so
-debian/tmp/usr/lib/chromium-browser/ssl_false_start_blacklist_process
-debian/tmp/usr/lib/chromium-browser/xdg-mime
-debian/chromium-browser.desktop usr/share/applications
-debian/chromium-browser.xml usr/share/gnome-control-center/default-apps
-debian/master_preferences etc/chromium-browser
-debian/presubj usr/share/bug/chromium-browser
