@@ -1,4 +1,0 @@
-?package(chromium-browser):needs="x11" section="Applications/Network/Web Browsing" \
-        title="Chromium" \
-        longtitle="Chromium Web Browser" \
-        command="chromium-browser"
