@@ -1,10 +1,0 @@
-#!/bin/sh
-
-set -e
-
-if [ "$1" = "remove" ] || [ "$1" = "deconfigure" ] ; then
-    update-alternatives --remove x-www-browser /usr/bin/chromium-browser
-    update-alternatives --remove gnome-www-browser /usr/bin/chromium-browser
-fi
-
-#DEBHELPER#
