@@ -1,0 +1,5 @@
+# Default settings for chromium. This file is sourced by /bin/sh from
+# /usr/bin/chromium
+
+# Options to pass to chromium
+CHROMIUM_FLAGS=""
