@@ -1,0 +1,2 @@
+usr/lib/chromium/plugins
+usr/lib/chromium/resources
