@@ -1,0 +1,14 @@
+debian/tmp/etc
+debian/tmp/usr/bin
+debian/tmp/usr/lib/chromium/chrom*
+debian/tmp/usr/lib/chromium/xdg-settings
+debian/tmp/usr/lib/chromium/resources.pak
+debian/tmp/usr/lib/chromium/locales/*
+debian/tmp/usr/lib/chromium/ffmpegsumo_nolink
+debian/tmp/usr/lib/chromium/libffmpegsumo.so
+debian/tmp/usr/lib/chromium/ssl_false_start_blacklist_process
+debian/tmp/usr/lib/chromium/xdg-mime
+debian/chromium.desktop usr/share/applications
+debian/chromium.xml usr/share/gnome-control-center/default-apps
+debian/master_preferences etc/chromium
+debian/presubj usr/share/bug/chromium
