@@ -1,0 +1,4 @@
+?package(chromium):needs="x11" section="Applications/Network/Web Browsing" \
+        title="Chromium" \
+        longtitle="Chromium Web Browser" \
+        command="chromium"
