@@ -4,11 +4,11 @@ set -e
 
 if [ "$1" = "configure" ] || [ "$1" = "abort-upgrade" ] ; then
     update-alternatives --install /usr/bin/x-www-browser \
-        x-www-browser /usr/bin/chromium-browser 40
+        x-www-browser /usr/bin/chromium 40
     update-alternatives --install /usr/bin/gnome-www-browser \
-        gnome-www-browser /usr/bin/chromium-browser 40
+        gnome-www-browser /usr/bin/chromium 40
 fi
 
-rm -f /etc/default/chromium-browser
+rm -f /etc/default/chromium
 
 #DEBHELPER#
