@@ -4,13 +4,13 @@
   <web-browsers>
     <web-browser>
       <name>Chromium</name>
-      <executable>chromium-browser</executable>
-      <command>/usr/bin/chromium-browser %s</command>
-      <icon-name>chromium-browser</icon-name>
+      <executable>chromium</executable>
+      <command>/usr/bin/chromium %s</command>
+      <icon-name>chromium</icon-name>
       <run-in-terminal>false</run-in-terminal>
       <netscape-remote>true</netscape-remote>
-      <tab-command>/usr/bin/chromium-browser %s</tab-command>
-      <win-command>/usr/bin/chromium-browser --new-window %s</win-command>
+      <tab-command>/usr/bin/chromium %s</tab-command>
+      <win-command>/usr/bin/chromium --new-window %s</win-command>
     </web-browser>
   </web-browsers>
 </default-apps>
