@@ -1,7 +1,7 @@
 # -*- sh -*-
 # This file is used as a way to replace text in certain files. Main reason is
 # to get shlib information for the different ffmpeg libraries used by
-# chromium-browser.
+# chromium.
 
 case "$1" in
     LIBAVCODEC_DEPENDS)
