@@ -2,8 +2,10 @@ chromium-browser (10.0.648.82~r75062-1) UNRELEASED; urgency=low
 
   * New beta version
   * Refreshed pathces
+  * Renamed binary packages, new names: chromium, chromium-l10n,
+    chromium-inspector, chromium-dbg
 
- -- Giuseppe Iuculano <iuculano@debian.org>  Sat, 19 Feb 2011 12:21:01 +0100
+ -- Giuseppe Iuculano <iuculano@debian.org>  Wed, 23 Feb 2011 10:05:18 +0100
 
 chromium-browser (9.0.597.98~r74359-1) unstable; urgency=low
 
